fix: (rename struct) Server -> RegisteredServer
