# docs/swagger.json
@@ -318,7 +318,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/structs.Server"
+                                "$ref": "#/definitions/structs.RegisteredServer"
                             }
                         }
                     }
@@ -351,7 +351,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/structs.Server"
+                            "$ref": "#/definitions/structs.RegisteredServer"
                         }
                     },
                     "500": {
@@ -453,7 +453,7 @@
                 }
             }
         },
-        "structs.Server": {
+        "structs.RegisteredServer": {
             "type": "object",
             "properties": {
                 "address": {
